# codenames-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Claude.md  README.md  README_ai_online.md  README_llm_bench.md
.github/workflows/: pages.yml
codenames_ai_online/: .gitignore
codenames_ai_online/docs/: app.js  config.js  index.html  styles.css
codenames_ai_online/worker/: tsconfig.json
codenames_bench/: agent.py  analyze.py  boards.py  env.py  legality.py  openai_responses.py  schemas.py  scoring.py  types.py
codenames_llm_bench/: README.md
codenames_llm_bench/codenames_bench/: openai_responses.py  prompts.py  runner.py  (+1 more)
configs/: agent_a.json  agent_a_smoke.json  agent_b_smoke.json
data/: boards_test.jsonl  words_small.txt
docs/: app.js  config.js  index.html  styles.css
python/: pyproject.toml
python/data/boards/: dev_20.json
python/data/configs/: gpt4o_baseline.json  gpt4o_both.json  gpt4o_mini_both.json  gpt4o_mini_fast.json
python/src/: __init__.py  cli.py  paths.py
python/src/benchmark/: __init__.py  metrics.py  runner.py
python/src/evaluation/: __init__.py  aggregator.py  reward.py  selector.py  simulator.py
python/src/game/: __init__.py  board.py  generator.py  rules.py  state.py
python/src/guesser/: __init__.py  guesser.py  schema_builder.py
python/src/spymaster/: __init__.py  schema_builder.py  spymaster.py
python/tests/: test_game.py
scripts/: analyze_results.py  dev_local.py  make_boards.py  run_match.py  run_sweep.py
shared/: wordlist.json
worker/: eslint.config.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+37 files in other folders)
